# autoanki

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  Start AutoAnki CLI.cmd  Start AutoAnki.cmd  Stop AutoAnki.cmd  autoanki.spec  pyproject.toml
.github/workflows/: release-macos.yml
autoanki/: __init__.py  __main__.py  build_deck.py  desktop.py  generator.py  paths.py  preview.py  quickcap.py  storage.py  system_prompt.txt  text_clean.py  validate.py  webui.py
autoanki/prompts/: regelungstechnik.txt
docs/: PORTABLE_DATA_README.txt  PORTABLE_EXPORTS_README.txt  PORTABLE_README.txt  PORTABLE_README_MACOS.txt  providers.md  release.md
examples/: cards.example.json
experiments/anki-clipper-prototype/: .gitignore  README.md  SPEC.md  clipboard.py  config.py  export_windows.bat  llm.py  main.py  notify.py  prompt.py  pyproject.toml  run_windows.bat
scripts/: __init__.py  build_portable.ps1  compare_regeneration.py  launch_desktop.py  launch_web.py  real_webui_e2e.py  regenerate_cards.py
tests/: test_build_deck.py  test_e2e.py  test_generator.py  test_preview.py  test_prompt.py  test_quickcap_terminal.py  test_storage.py  test_text_clean.py  test_validate.py  test_webui_e2e.py
