[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoanki"
version = "0.1.0"
description = "Local clipboard-to-Anki card generator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genanki>=0.13.1",
    "pillow>=10.0.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
autoanki = "autoanki.quickcap:main"
autoanki-web = "autoanki.webui:main"

[tool.setuptools]
packages = ["autoanki"]

[tool.setuptools.package-data]
autoanki = ["system_prompt.txt"]

[dependency-groups]
release = [
    "pyinstaller>=6.21.0",
    "pywebview>=6.1",
]
